[gd_scene load_steps=12 format=2]

[ext_resource path="res://content/caves/mushroomcave/MushroomCave.gd" type="Script" id=1]
[ext_resource path="res://content/map/Parallaxer.gd" type="Script" id=2]
[ext_resource path="res://content/caves/seedcave/focus.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/caves/mushroomcave/consumable.png" type="Texture" id=5]
[ext_resource path="res://content/sounds/Amb/Garden subtle.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/caves/mushroomcave/mushroomcave-Sheet.png" type="Texture" id=8]
[ext_resource path="res://content/sounds/carryline-break.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/Biomes/mushroomConsumedSound.wav" type="AudioStream" id=10]
[ext_resource path="res://content/caves/mushroomcave/mushroomcave_alpha_map_blurred.png" type="Texture" id=11]

[node name="MushroomCave" type="Node2D" groups=["saveable", "unstyled"]]
z_index = -40
script = ExtResource( 1 )
biome = "red"

[node name="ExtraBackground" type="ColorRect" parent="."]
margin_left = -1.0
margin_right = 67.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0.129412, 0.0941176, 0.137255, 1 )

[node name="Sprites" type="Control" parent="."]
margin_right = 66.0
margin_bottom = 48.0
rect_clip_content = true
script = ExtResource( 2 )
start_offset = 0.2
scaling = 0.8

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6

[node name="ExtraBackground2" type="ColorRect" parent="Sprites/Sprite"]
margin_left = -47.0
margin_top = -33.0
margin_right = 43.0
margin_bottom = 35.0
mouse_filter = 2
color = Color( 0.396078, 0.105882, 0.196078, 1 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6
frame = 1

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6
frame = 2

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6
frame = 3

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6
frame = 4

[node name="Sprite6" type="Sprite" parent="Sprites"]
position = Vector2( 37, 25 )
texture = ExtResource( 8 )
hframes = 6
frame = 5

[node name="Mushroom" type="Sprite" parent="Sprites/Sprite6"]
position = Vector2( 1, 15 )
texture = ExtResource( 5 )

[node name="FocusMarker" type="Sprite" parent="Sprites/Sprite6"]
position = Vector2( 2, 11 )
texture = ExtResource( 3 )

[node name="MushroomConsumedSound" parent="." instance=ExtResource( 7 )]
volume_db = 5.193
pitch_scale = 1.22
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
streams = [ ExtResource( 9 ) ]

[node name="MushroomConsumedSound2" parent="MushroomConsumedSound" instance=ExtResource( 7 )]
volume_db = -3.547
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
streams = [ ExtResource( 10 ) ]

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( 37, 38 )
visibleOnFocus = NodePath("../Sprites/Sprite6/FocusMarker")

[node name="AmbSound" parent="Usable" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = -2.235
pitch_scale = 0.69
bus = "Mine"
randomVolume = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 36.0
fadeInTime = 0.1
fadeOutTime = 3.0
loop = true

[node name="Tween" type="Tween" parent="."]

[node name="AlphaMap" type="Sprite" parent="."]
visible = false
position = Vector2( 33, 25 )
texture = ExtResource( 11 )
